2008-01-21  Richard Guenther  <rguenther@suse.de>

PR c++/34850
	cp/
	* error.c (cp_print_error_function): Deal with recursive
	BLOCK trees.

	* g++.dg/torture/pr34850.C: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131690 138bc75d-0d04-0410-961f-82ee72b054a4